加入新页面“库存盘点”(StorageLookup.html)

--- a/BR-MS/StorageLookup.html
+++ b/BR-MS/StorageLookup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>库存盘点</title>
@@ -21,7 +21,6 @@
 <script src="res/dependencies.js"></script>
 <script>
     var post = require('/mods/backend');
-
 
     var app = new Vue({
         el: '#app',
