只要加第314行

--- a/BR-MS/resRegister.html
+++ b/BR-MS/resRegister.html
@@ -311,6 +311,7 @@
                                         <el-form-item label="身份识别码" prop="localId" required>
                                             <el-input v-model="resGeneralForm.localId" placeholder="身份识别码"></el-input>
                                         </el-form-item>
+                                        <!--这里加物资类型的组件-->
                                         <el-form-item label="物资类型" prop="type" required>
                                             <el-select v-model="resGeneralForm.type" placeholder="物资类型">
                                                 <el-option value="电脑整机">电脑整机</el-option>
